--- a/denkstdutest.html
+++ b/denkstdutest.html
@@ -544,7 +544,7 @@ System bereit für Tests...\n
                     authDomain: "denkstduwebsite.firebaseapp.com",
                     databaseURL: "https://denkstduwebsite-default-rtdb.europe-west1.firebasedatabase.app",
                     projectId: "denkstduwebsite",
-                    storageBucket: "denkstduwebsite.firebasestorage.app",
+                    storageBucket: "denkstduwebsite.appspot.com",
                     messagingSenderId: "27029260611",
                     appId: "1:27029260611:web:3c7da4db0bf92e8ce247f6"
                 };
