--- a/device-selection.html
+++ b/device-selection.html
@@ -763,7 +763,7 @@
                     authDomain: "denkstduwebsite.firebaseapp.com",
                     databaseURL: "https://denkstduwebsite-default-rtdb.europe-west1.firebasedatabase.app",
                     projectId: "denkstduwebsite",
-                    storageBucket: "denkstduwebsite.firebasestorage.app",
+                    storageBucket: "denkstduwebsite.appspot.com",
                     messagingSenderId: "27029260611",
                     appId: "1:27029260611:web:3c7da4db0bf92e8ce247f6",
                     measurementId: "G-BNKNW95HK8"
