--- a/multiplayer-gameplay.html
+++ b/multiplayer-gameplay.html
@@ -1375,10 +1375,132 @@
                 "Ich habe schon mal... vergessen, wo ich mein Auto geparkt habe"
             ],
             fsk18: [
-                "Ich habe schon mal... einen peinlichen Betrunkenheits-Text verschickt",
-                "Ich habe schon mal... mich in eine Person verliebt, die vergeben war",
-                "Ich habe schon mal... bei einem Date gelogen, um interessanter zu wirken",
-                "Ich habe schon mal... heimlich die Social Media Profile meines Ex gecheckt"
+                "Ich habe schon mal... an einem öffentlichen Ort Sex gehabt",
+                "Ich habe schon mal... eine Affäre gehabt",
+                "Ich habe schon mal... in einer Beziehung betrogen",
+                "Ich habe schon mal... einen Amateur-Porno gedreht",
+                "Ich habe schon mal... einen Porno mit mehreren Personen zusammen angesehen",
+                "Ich habe schon mal... Sex gehabt und es danach bereut",
+                "Ich habe schon mal... Analsex gehabt",
+                "Ich habe schon mal... einen Dreier gehabt",
+                "Ich habe schon mal... mich vor Oralsex geekelt",
+                "Ich habe schon mal... einen Blowjob gegeben",
+                "Ich habe schon mal... einen Blowjob bekommen",
+                "Ich habe schon mal... Sperma geschluckt",
+                "Ich habe schon mal... Sperma ins Auge bekommen",
+                "Ich habe schon mal... während dem Autofahren einen Blowjob bekommen oder gegeben",
+                "Ich habe schon mal... im Wald einen geblasen bekommen",
+                "Ich habe schon mal... beim Sex kotzen müssen",
+                "Ich habe schon mal... beim Sex gelacht",
+                "Ich habe schon mal... mich beim Sex im Spiegel beobachtet",
+                "Ich habe schon mal... einen Orgasmus gefaked",
+                "Ich habe schon mal... mehrere Orgasmen hintereinander gehabt",
+                "Ich habe schon mal... für jemanden gestrippt",
+                "Ich habe schon mal... bei einer Sex-Hotline angerufen",
+                "Ich habe schon mal... für Sex bezahlt",
+                "Ich habe schon mal... darüber nachgedacht, für Sex Geld zu verlangen",
+                "Ich habe schon mal... Geld oder Geschenke für sexuelle Dienste erhalten",
+                "Ich habe schon mal... gesagt bekommen, dass ich zu schnell gekommen bin",
+                "Ich habe schon mal... jemanden geschwängert",
+                "Ich habe schon mal... einen Vaterschaftstest gemacht",
+                "Ich habe schon mal... ein Intim-Piercing gehabt",
+                "Ich habe schon mal... Fantasien gehabt, in denen ich gefesselt wurde",
+                "Ich habe schon mal... so laut gestöhnt, dass andere mich gehört haben",
+                "Ich habe schon mal... wegen eines Sexunfalls ins Krankenhaus gemusst",
+                "Ich habe schon mal... das Verlangen gehabt, meinen Partner zu betrügen",
+                "Ich habe schon mal... über das Geschlechtsteil des anderen gelacht",
+                "Ich habe schon mal... mein Geschlechtsteil mit einem Lineal gemessen",
+                "Ich habe schon mal... Lebensmittel beim Sex benutzt",
+                "Ich habe schon mal... Lebensmittel zur Selbstbefriedigung verwendet",
+                "Ich habe schon mal... eine elektrische Zahnbürste zur Selbstbefriedigung verwendet",
+                "Ich habe schon mal... nach dem Trinken keinen hochbekommen",
+                "Ich habe schon mal... eine Person geküsst, die gerade mitspielt",
+                "Ich habe schon mal... mit mehreren Personen am selben Tag geschlafen",
+                "Ich habe schon mal... über die Anzahl meiner Sexualpartner gelogen",
+                "Ich habe schon mal... mit mehr als 10 Personen geschlafen",
+                "Ich habe schon mal... eine Stellung aus dem Kamasutra ausprobiert",
+                "Ich habe schon mal... Sex mit meinem Ex gehabt",
+                "Ich habe schon mal... jemanden geküsst, der vergeben war",
+                "Ich habe schon mal... Sex mit jemandem gehabt, der vergeben war",
+                "Ich habe schon mal... beim Sex den falschen Namen gesagt",
+                "Ich habe schon mal... mit jemandem geschlafen, dessen Namen ich nicht kannte",
+                "Ich habe schon mal... mit jemandem geschlafen und es danach geleugnet",
+                "Ich habe schon mal... heimlich Sexspielzeug gekauft",
+                "Ich habe schon mal... während einer Videokonferenz masturbiert",
+                "Ich habe schon mal... Sex im Elternhaus gehabt, während die Eltern da waren",
+                "Ich habe schon mal... versehentlich einen Sextraum laut ausgesprochen",
+                "Ich habe schon mal... beim Sex eingeschlafen",
+                "Ich habe schon mal... Sex in einem öffentlichen Verkehrsmittel gehabt",
+                "Ich habe schon mal... jemanden beim Masturbieren erwischt",
+                "Ich habe schon mal... beim Masturbieren erwischt worden",
+                "Ich habe schon mal... Unterwäsche gestohlen",
+                "Ich habe schon mal... getragene Unterwäsche geschnüffelt",
+                "Ich habe schon mal... Sex im Büro gehabt",
+                "Ich habe schon mal... mit einem Prominenten geschlafen",
+                "Ich habe schon mal... mit jemandem geschlafen, der doppelt so alt war wie ich",
+                "Ich habe schon mal... mit jemandem geschlafen, der halb so alt war wie ich",
+                "Ich habe schon mal... Sex mit einem Fremden aus dem Internet gehabt",
+                "Ich habe schon mal... bei einem One-Night-Stand einen falschen Namen gegeben",
+                "Ich habe schon mal... heimlich Nacktfotos von jemandem gemacht",
+                "Ich habe schon mal... meine Nacktfotos an die falsche Person geschickt",
+                "Ich habe schon mal... beim Sex geweint",
+                "Ich habe schon mal... jemanden zum Orgasmus geleckt",
+                "Ich habe schon mal... Sexting mit mehreren Personen gleichzeitig betrieben",
+                "Ich habe schon mal... Sex während der Periode gehabt",
+                "Ich habe schon mal... beim Sex den Namen meines Ex geschrien",
+                "Ich habe schon mal... Sex in einem Fahrstuhl gehabt",
+                "Ich habe schon mal... Sex in einem Schwimmbad gehabt",
+                "Ich habe schon mal... Sex am Strand gehabt",
+                "Ich habe schon mal... Sex in einem Kino gehabt",
+                "Ich habe schon mal... beim Sex die Nachbarn geweckt",
+                "Ich habe schon mal... mit dem besten Freund/der besten Freundin meines Partners geschlafen",
+                "Ich habe schon mal... heimlich die Kondome meines Mitbewohners benutzt",
+                "Ich habe schon mal... Sex ohne Verhütung gehabt, obwohl ich hätte verhüten sollen",
+                "Ich habe schon mal... beim Sex meinen Körper komplett versteckt",
+                "Ich habe schon mal... während eines Dates heimlich gegoogelt, was mein Date mag",
+                "Ich habe schon mal... mich vor einem Date rasiert und dann wurde es abgesagt",
+                "Ich habe schon mal... einem Partner vorgespielt, dass ich unerfahren bin",
+                "Ich habe schon mal... einem Partner vorgespielt, dass ich sehr erfahren bin",
+                "Ich habe schon mal... Sex gehabt, nur um den anderen loszuwerden",
+                "Ich habe schon mal... mich beim Sex verletzt",
+                "Ich habe schon mal... jemanden beim Sex verletzt",
+                "Ich habe schon mal... Sex gehabt und dabei an jemand anderen gedacht",
+                "Ich habe schon mal... vor dem Sex gelogen, wie viele Partner ich hatte",
+                "Ich habe schon mal... Sex gehabt und mich dabei gefilmt",
+                "Ich habe schon mal... ein Sexvideo von mir selbst angeschaut",
+                "Ich habe schon mal... beim Sex ein Möbelstück kaputt gemacht",
+                "Ich habe schon mal... Sex in einem Hotelzimmer gehabt, das nicht meins war",
+                "Ich habe schon mal... mich selbst beim Sex im Handy-Display beobachtet",
+                "Ich habe schon mal... Sex gehabt, während andere im selben Raum geschlafen haben",
+                "Ich habe schon mal... mit einer verheirateten Person geschlafen",
+                "Ich habe schon mal... Sex mit dem Kollegen/der Kollegin gehabt",
+                "Ich habe schon mal... eine Affäre mit dem Chef/der Chefin gehabt",
+                "Ich habe schon mal... Sex am Arbeitsplatz gehabt",
+                "Ich habe schon mal... mich über eine Dating-App nur für Sex verabredet",
+                "Ich habe schon mal... beim ersten Date Sex gehabt",
+                "Ich habe schon mal... Sex mit jemandem gehabt, den ich eigentlich nicht attraktiv fand",
+                "Ich habe schon mal... aus Mitleid Sex gehabt",
+                "Ich habe schon mal... Sex gehabt, um jemanden eifersüchtig zu machen",
+                "Ich habe schon mal... heimlich die Handynachrichten meines Partners gelesen",
+                "Ich habe schon mal... meinen Partner beim Fremdgehen erwischt",
+                "Ich habe schon mal... beim Fremdgehen erwischt worden",
+                "Ich habe schon mal... Sex in einem Auto gehabt",
+                "Ich habe schon mal... Sex in der Natur gehabt und dabei fast erwischt worden",
+                "Ich habe schon mal... vergessen, wie mein One-Night-Stand hieß",
+                "Ich habe schon mal... Sex mit zwei verschiedenen Personen an einem Tag gehabt",
+                "Ich habe schon mal... gelogen, dass ich verhüte",
+                "Ich habe schon mal... ein Kondom heimlich entfernt",
+                "Ich habe schon mal... so getan, als würde ich kommen",
+                "Ich habe schon mal... beim Sex an meinen Ex gedacht",
+                "Ich habe schon mal... Sex gehabt, obwohl ich eigentlich keine Lust hatte",
+                "Ich habe schon mal... eine Geschlechtskrankheit gehabt",
+                "Ich habe schon mal... verschwiegen, dass ich eine Geschlechtskrankheit hatte",
+                "Ich habe schon mal... mich gefragt, ob ich homosexuell bin",
+                "Ich habe schon mal... mit einer Person des gleichen Geschlechts experimentiert",
+                "Ich habe schon mal... von einer Person des gleichen Geschlechts geträumt",
+                "Ich habe schon mal... einen Fetisch entwickelt",
+                "Ich habe schon mal... meinen Fetisch vor meinem Partner verheimlicht",
+                "Ich habe schon mal... Sex mit jemandem gehabt, nur um es auszuprobieren"
             ]
         };
 
