--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
             border: 2px solid rgba(255, 215, 0, 0.6);
             backdrop-filter: blur(30px);
             border-radius: 20px;
-            padding: 15px;
-            margin-bottom: 15px;
+            padding: 20px;
+            margin-bottom: 20px;
             text-align: center;
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.15);
             flex-shrink: 0;
@@ -608,85 +608,56 @@
 
         .final-title {
             color: #FFD700;
-            font-size: 1.4rem;
+            font-size: 1.6rem;
             font-weight: 800;
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             text-shadow: 0 2px 15px rgba(0, 0, 0, 0.4);
         }
 
         .final-subtitle {
             color: rgba(255, 255, 255, 0.95);
-            font-size: 0.9rem;
-            font-weight: 600;
-        }
-
-        .final-stats {
-            background: rgba(255, 255, 255, 0.12);
-            border-radius: 15px;
-            padding: 15px;
-            margin-bottom: 15px;
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            gap: 10px;
-            flex-shrink: 0;
-        }
-
-        .stat-item {
-            text-align: center;
-        }
-
-        .stat-value {
-            color: white;
-            font-size: 1.4rem;
-            font-weight: 800;
-            margin-bottom: 3px;
-            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-        }
-
-        .stat-label {
-            color: rgba(255, 255, 255, 0.8);
-            font-size: 0.8rem;
+            font-size: 1rem;
             font-weight: 600;
         }
 
         .leaderboard {
             flex: 1;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             min-height: 0;
         }
 
         .leaderboard-title {
             color: white;
-            font-size: 1.2rem;
+            font-size: 1.3rem;
             font-weight: 700;
             text-align: center;
-            margin-bottom: 3px;
+            margin-bottom: 5px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .leaderboard-subtitle {
             color: rgba(255, 255, 255, 0.8);
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             font-weight: 500;
             text-align: center;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         #leaderboard-list {
             display: grid;
-            gap: 10px;
-            max-height: 250px;
+            gap: 12px;
+            max-height: 350px;
             overflow-y: auto;
         }
 
         .leaderboard-item {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
-            border-radius: 15px;
-            padding: 12px 15px;
+            border-radius: 18px;
+            padding: 18px 20px;
             display: flex;
             align-items: center;
-            gap: 15px;
+            gap: 18px;
             border: 1px solid rgba(255, 255, 255, 0.25);
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
@@ -700,21 +671,44 @@
         }
 
         .rank-number {
-            width: 35px;
-            height: 35px;
+            width: 45px;
+            height: 45px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: 800;
-            font-size: 1.1rem;
+            font-size: 1.2rem;
             flex-shrink: 0;
             box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
         }
 
+        .rank-1 { 
+            background: linear-gradient(135deg, #FFD700, #FFA500); 
+            color: white;
+            animation: goldGlow 2s ease-in-out infinite alternate;
+        }
+        .rank-2 { 
+            background: linear-gradient(135deg, #C0C0C0, #A0A0A0); 
+            color: white; 
+        }
+        .rank-3 { 
+            background: linear-gradient(135deg, #CD7F32, #B8860B); 
+            color: white; 
+        }
+        .rank-other { 
+            background: rgba(255, 255, 255, 0.2); 
+            color: white; 
+        }
+
+        @keyframes goldGlow {
+            0% { box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); }
+            100% { box-shadow: 0 4px 25px rgba(255, 215, 0, 0.6); }
+        }
+
         .result-avatar {
-            width: 35px;
-            height: 35px;
+            width: 45px;
+            height: 45px;
             background: linear-gradient(135deg, #4facfe, #00f2fe);
             border-radius: 50%;
             display: flex;
@@ -722,7 +716,7 @@
             justify-content: center;
             color: white;
             font-weight: 800;
-            font-size: 0.9rem;
+            font-size: 1.1rem;
             box-shadow: 0 4px 15px rgba(79, 172, 254, 0.3);
             flex-shrink: 0;
         }
@@ -734,27 +728,27 @@
         .player-final-name {
             color: white;
             font-weight: 700;
-            font-size: 1rem;
-            margin-bottom: 5px;
+            font-size: 1.2rem;
+            margin-bottom: 8px;
             text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
         }
 
         .player-final-details {
             color: rgba(255, 255, 255, 0.85);
-            font-size: 0.8rem;
+            font-size: 1rem;
             display: flex;
-            gap: 15px;
+            gap: 20px;
             align-items: center;
         }
 
         .detail-item {
             display: flex;
             align-items: center;
-            gap: 4px;
+            gap: 6px;
         }
 
         .detail-icon {
-            font-size: 1rem;
+            font-size: 1.1rem;
         }
 
         .final-navigation {
@@ -762,8 +756,8 @@
         }
 
         .nav-btn.large {
-            padding: 15px 20px;
-            font-size: 1.1rem;
+            padding: 18px 25px;
+            font-size: 1.2rem;
         }
 
         /* Toast Notifications */
@@ -1065,17 +1059,6 @@
                 <div class="final-header">
                     <div class="final-title">🏆 Spiel beendet!</div>
                     <div class="final-subtitle">Hier sind die finalen Ergebnisse</div>
-                </div>
-
-                <div class="final-stats">
-                    <div class="stat-item">
-                        <div class="stat-value" id="total-questions-played">0</div>
-                        <div class="stat-label">Fragen gespielt</div>
-                    </div>
-                    <div class="stat-item">
-                        <div class="stat-value" id="total-players-count">0</div>
-                        <div class="stat-label">Spieler</div>
-                    </div>
                 </div>
 
                 <div class="leaderboard">
@@ -1487,10 +1470,6 @@
         }
 
         function displayFinalResults(finalRankings) {
-            // Update stats
-            document.getElementById('total-questions-played').textContent = currentGame.gameHistory.length;
-            document.getElementById('total-players-count').textContent = currentGame.players.length;
-            
             // Build leaderboard
             const leaderboardList = document.getElementById('leaderboard-list');
             leaderboardList.innerHTML = '';
@@ -1536,12 +1515,14 @@
 
         function showFinalResultsView() {
             // Hide all other sections
+            const questionCard = document.querySelector('.question-card');
             const answerSection = document.getElementById('answer-section');
             const estimationSection = document.getElementById('estimation-section');
             const submitSection = document.getElementById('submit-section');
             const currentPlayerCard = document.querySelector('.current-player-card');
             const resultsSection = document.getElementById('results-section');
             
+            if (questionCard) questionCard.style.display = 'none';
             if (answerSection) answerSection.style.display = 'none';
             if (estimationSection) estimationSection.style.display = 'none';
             if (submitSection) submitSection.style.display = 'none';
