--- a/category-selection.html
+++ b/category-selection.html
@@ -989,7 +989,7 @@
         function goBack() {
             showLoading();
             setTimeout(() => {
-                window.location.href = 'device-selection.html';
+                window.location.href = 'index.html';
             }, 300);
         }
 
