--- a/gameplay.html
+++ b/gameplay.html
@@ -244,8 +244,8 @@
         .estimation-section {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
-            border-radius: 20px;
-            padding: 20px;
+            border-radius: 15px;
+            padding: 12px;
             margin-bottom: 10px;
             border: 1px solid rgba(255, 255, 255, 0.25);
             box-shadow: 0 15px 50px rgba(0, 0, 0, 0.1);
@@ -257,10 +257,10 @@
 
         .estimation-title {
             color: white;
-            font-size: 1.1rem;
+            font-size: 0.9rem;
             font-weight: 700;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 10px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
             flex-shrink: 0;
         }
@@ -315,23 +315,23 @@
         .selection-display {
             background: linear-gradient(135deg, rgba(76, 175, 80, 0.2), rgba(76, 175, 80, 0.3));
             border: 2px solid rgba(76, 175, 80, 0.5);
-            border-radius: 20px;
-            padding: 12px 20px;
+            border-radius: 12px;
+            padding: 8px 12px;
             display: inline-block;
-            min-width: 140px;
+            min-width: 100px;
         }
 
         .selection-number {
             color: white;
-            font-size: 1.6rem;
+            font-size: 1.2rem;
             font-weight: 800;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
-            margin-bottom: 2px;
+            margin-bottom: 1px;
         }
 
         .selection-label {
             color: rgba(255, 255, 255, 0.9);
-            font-size: 0.85rem;
+            font-size: 0.7rem;
             font-weight: 600;
         }
 
@@ -479,29 +479,35 @@
             align-content: start;
             max-height: 200px;
             overflow-y: auto;
+            overflow-x: hidden;
+            width: 100%;
         }
 
         .result-item {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
             border-radius: 15px;
-            padding: 15px;
+            padding: 12px;
             display: flex;
             justify-content: space-between;
             align-items: center;
             border: 1px solid rgba(255, 255, 255, 0.25);
             box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+            min-width: 0;
+            width: 100%;
         }
 
         .player-result {
             display: flex;
             align-items: center;
-            gap: 12px;
+            gap: 10px;
+            flex: 1;
+            min-width: 0;
         }
 
         .result-avatar {
-            width: 40px;
-            height: 40px;
+            width: 35px;
+            height: 35px;
             background: linear-gradient(135deg, #4facfe, #00f2fe);
             border-radius: 50%;
             display: flex;
@@ -509,36 +515,46 @@
             justify-content: center;
             color: white;
             font-weight: 800;
-            font-size: 1rem;
+            font-size: 0.9rem;
             box-shadow: 0 4px 15px rgba(79, 172, 254, 0.3);
             flex-shrink: 0;
         }
 
         .player-result-info {
             color: white;
+            flex: 1;
+            min-width: 0;
         }
 
         .player-result-name {
             font-weight: 700;
-            font-size: 1rem;
+            font-size: 0.95rem;
             margin-bottom: 3px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .player-answer {
-            font-size: 0.85rem;
+            font-size: 0.8rem;
             opacity: 0.8;
             font-weight: 500;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
         }
 
         .sips-penalty {
             background: linear-gradient(135deg, rgba(244, 67, 54, 0.3), rgba(244, 67, 54, 0.4));
             border: 1px solid #f44336;
             color: #f44336;
-            padding: 8px 15px;
-            border-radius: 15px;
+            padding: 6px 10px;
+            border-radius: 12px;
             font-weight: 800;
-            font-size: 0.9rem;
+            font-size: 0.8rem;
             box-shadow: 0 4px 12px rgba(244, 67, 54, 0.2);
+            flex-shrink: 0;
+            white-space: nowrap;
         }
 
         .sips-penalty.none {
@@ -586,101 +602,102 @@
             transform: scale(0.98);
         }
 
-        /* Final Results Section */
+        /* Final Results Section - Kompakt für mobile */
         .final-results-section {
             flex: 1;
             display: flex;
             flex-direction: column;
             min-height: 0;
+            padding: 0 5px;
         }
 
         .final-header {
             background: linear-gradient(135deg, rgba(255, 215, 0, 0.2), rgba(255, 215, 0, 0.3));
             border: 2px solid rgba(255, 215, 0, 0.6);
             backdrop-filter: blur(30px);
-            border-radius: 20px;
-            padding: 20px;
-            margin-bottom: 20px;
+            border-radius: 15px;
+            padding: 12px 15px;
+            margin-bottom: 12px;
             text-align: center;
-            box-shadow: 0 15px 50px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
             flex-shrink: 0;
         }
 
         .final-title {
             color: #FFD700;
-            font-size: 1.6rem;
+            font-size: 1.3rem;
             font-weight: 800;
-            margin-bottom: 8px;
-            text-shadow: 0 2px 15px rgba(0, 0, 0, 0.4);
+            margin-bottom: 4px;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.4);
         }
 
         .final-subtitle {
             color: rgba(255, 255, 255, 0.95);
-            font-size: 1rem;
+            font-size: 0.85rem;
             font-weight: 600;
         }
 
         .leaderboard {
             flex: 1;
-            margin-bottom: 20px;
+            margin-bottom: 12px;
             min-height: 0;
         }
 
         .leaderboard-title {
             color: white;
-            font-size: 1.3rem;
+            font-size: 1.1rem;
             font-weight: 700;
             text-align: center;
-            margin-bottom: 5px;
+            margin-bottom: 3px;
             text-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
         }
 
         .leaderboard-subtitle {
             color: rgba(255, 255, 255, 0.8);
-            font-size: 0.9rem;
+            font-size: 0.75rem;
             font-weight: 500;
             text-align: center;
-            margin-bottom: 20px;
+            margin-bottom: 12px;
         }
 
         #leaderboard-list {
             display: grid;
-            gap: 12px;
-            max-height: 350px;
+            gap: 8px;
+            max-height: 280px;
             overflow-y: auto;
         }
 
         .leaderboard-item {
             background: rgba(255, 255, 255, 0.12);
             backdrop-filter: blur(30px);
-            border-radius: 18px;
-            padding: 18px 20px;
+            border-radius: 15px;
+            padding: 12px 15px;
             display: flex;
             align-items: center;
-            gap: 18px;
+            gap: 12px;
             border: 1px solid rgba(255, 255, 255, 0.25);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.1);
             transition: all 0.3s ease;
         }
 
         .leaderboard-item.winner {
             background: linear-gradient(135deg, rgba(255, 215, 0, 0.2), rgba(255, 215, 0, 0.3));
             border-color: #FFD700;
-            transform: scale(1.02);
-            box-shadow: 0 12px 35px rgba(255, 215, 0, 0.3);
+            transform: scale(1.01);
+            box-shadow: 0 8px 25px rgba(255, 215, 0, 0.3);
         }
 
         .rank-number {
-            width: 45px;
-            height: 45px;
+            width: 35px;
+            height: 35px;
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
             font-weight: 800;
-            font-size: 1.2rem;
+            font-size: 1rem;
             flex-shrink: 0;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 3px 12px rgba(0, 0, 0, 0.2);
         }
 
         .rank-1 { 
@@ -702,13 +719,13 @@
         }
 
         @keyframes goldGlow {
-            0% { box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); }
-            100% { box-shadow: 0 4px 25px rgba(255, 215, 0, 0.6); }
+            0% { box-shadow: 0 3px 12px rgba(255, 215, 0, 0.3); }
+            100% { box-shadow: 0 3px 18px rgba(255, 215, 0, 0.6); }
         }
 
         .result-avatar {
-            width: 45px;
-            height: 45px;
+            width: 35px;
+            height: 35px;
             background: linear-gradient(135deg, #4facfe, #00f2fe);
             border-radius: 50%;
             display: flex;
@@ -716,8 +733,8 @@
             justify-content: center;
             color: white;
             font-weight: 800;
-            font-size: 1.1rem;
-            box-shadow: 0 4px 15px rgba(79, 172, 254, 0.3);
+            font-size: 0.9rem;
+            box-shadow: 0 3px 12px rgba(79, 172, 254, 0.3);
             flex-shrink: 0;
         }
 
@@ -728,27 +745,27 @@
         .player-final-name {
             color: white;
             font-weight: 700;
-            font-size: 1.2rem;
-            margin-bottom: 8px;
+            font-size: 1rem;
+            margin-bottom: 4px;
             text-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
         }
 
         .player-final-details {
             color: rgba(255, 255, 255, 0.85);
-            font-size: 1rem;
+            font-size: 0.8rem;
             display: flex;
-            gap: 20px;
+            gap: 15px;
             align-items: center;
         }
 
         .detail-item {
             display: flex;
             align-items: center;
-            gap: 6px;
+            gap: 4px;
         }
 
         .detail-icon {
-            font-size: 1.1rem;
+            font-size: 0.9rem;
         }
 
         .final-navigation {
@@ -756,8 +773,8 @@
         }
 
         .nav-btn.large {
-            padding: 18px 25px;
-            font-size: 1.2rem;
+            padding: 14px 20px;
+            font-size: 1rem;
         }
 
         /* Toast Notifications */
@@ -892,6 +909,53 @@
         }
 
         /* Responsive Design */
+        /* Responsive Design */
+        @media (max-width: 480px) {
+            .app-container {
+                padding: 8px;
+            }
+            
+            .question-text {
+                font-size: 0.95rem;
+            }
+            
+            .number-btn {
+                width: 45px;
+                height: 45px;
+                font-size: 1rem;
+            }
+
+            .estimation-section {
+                padding: 12px;
+            }
+
+            .selection-display {
+                min-width: 80px;
+                padding: 6px 10px;
+            }
+
+            .selection-number {
+                font-size: 1rem;
+            }
+
+            .selection-label {
+                font-size: 0.65rem;
+            }
+
+            .player-result-name {
+                font-size: 0.9rem;
+            }
+
+            .player-answer {
+                font-size: 0.75rem;
+            }
+
+            .sips-penalty {
+                padding: 5px 8px;
+                font-size: 0.75rem;
+            }
+        }
+
         @media (max-height: 700px) {
             .question-text {
                 font-size: 0.9rem;
@@ -905,6 +969,18 @@
 
             .estimation-section {
                 padding: 12px;
+            }
+
+            .answer-btn {
+                padding: 12px 8px;
+            }
+
+            .selection-display {
+                padding: 6px 8px;
+            }
+
+            .selection-number {
+                font-size: 1rem;
             }
         }
 
@@ -941,6 +1017,39 @@
             .answer-btn {
                 padding: 12px 8px;
             }
+
+            .answer-emoji {
+                font-size: 1rem;
+            }
+
+            .selection-display {
+                padding: 4px 6px;
+                min-width: 70px;
+            }
+
+            .selection-number {
+                font-size: 0.9rem;
+            }
+
+            .selection-label {
+                font-size: 0.6rem;
+            }
+
+            .submit-btn {
+                padding: 12px;
+                font-size: 0.9rem;
+            }
+        }
+
+        /* Verhindere horizontales Scrollen überall */
+        * {
+            max-width: 100%;
+            box-sizing: border-box;
+        }
+
+        .app-container, .game-content, .estimation-section, .results-section, .final-results-section {
+            overflow-x: hidden;
+            width: 100%;
         }
 
         /* Animations */
